doar ex:1 + ex:3

--- a/tema-curs5/index.html
+++ b/tema-curs5/index.html
@@ -16,7 +16,7 @@
         <div id="right-content">
             <p id="linesPlaceholder">Lines: <strong id="score">0</strong></p>
             <p id="scorePlaceholder">Score: <strong id="score">0</strong></p>
-            <div id="nextShapePlaceholder">Next Shape</div>
+            <div id="nextShapePlaceholder"><canvas id="nextShapeCanvas"></canvas></div>
             <button id="startGame">Start</button>
         </div>
     </div>
